syntax = "proto3";

package phxqueue_phxrpc.lock;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "phxqueue/comm/proto/comm.proto";
import "phxrpc/rpc/phxrpc.proto";

service Lock {
    rpc GetLockInfo(phxqueue.comm.proto.GetLockInfoRequest) returns(phxqueue.comm.proto.GetLockInfoResponse) {
        option(phxrpc.CmdID) = 1;
    }

    rpc AcquireLock(phxqueue.comm.proto.AcquireLockRequest) returns(phxqueue.comm.proto.AcquireLockResponse) {
        option(phxrpc.CmdID) = 2;
    }
}

